# neon

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  camera.cc  camera.h  context.h  defines.h  event.cc  event.h  filesystem.cc  filesystem.h  input.cc  input.h  main.cc  message_queue.h  program.cc  program.h  renderer.cc  renderer.h  shader.cc  shader.frag  shader.h  shader.vert  texture.cc  texture.h  window.cc  window.h
shaders/: basic_lighting.frag  basic_lighting.vert  colors.frag  light_cube.vert  materials.frag  materials.vert
